# pcap-sample

./: .gitignore  CMakeLists.txt  README.md  main.cpp  metrics-table.sql
frontend/: README.md  nx.json  package-lock.json  package.json  tsconfig.base.json
frontend/apps/main/: project.json  tsconfig.editor.json
frontend/apps/main/src/: main.ts  styles.scss
frontend/apps/main/src/aframe-sample-1/: aframe-sample-1.component.html  aframe-sample-1.component.scss  aframe-sample-1.component.ts  aframe-sample-1.module.ts
frontend/apps/main/src/app/: app.component.html  app.component.scss  app.component.ts  app.module.ts  app.routes.ts  nx-welcome.component.ts
frontend/apps/main/src/force-graph-sample-1/: force-graph-sample-1.component.html  force-graph-sample-1.component.scss  force-graph-sample-1.component.ts  force-graph-sample-1.module.ts
frontend/apps/main/src/threejs-sample/: threejs-sample.component.html  threejs-sample.component.scss  threejs-sample.component.ts  threejs-sample.module.ts
frontend/libs/common/: package.json  project.json
frontend/libs/common/src/: index.ts
frontend/libs/common/src/lib/common/: sniffy.model.ts  sniffy.service.ts
include/: y-pcap-service.h
kafka-connect-sink/: pom.xml
kafka-connect-sink/src/main/java/ycode/: ProtobufBase64Converter.java
kafka-connect-sink/src/test/java/ycode/: ProtobufBase64ConverterTest.java
pcap-sample-middleware/: .env  .gitignore  docker-compose.yml
pcap-sample-middleware/kafka/data/: bootstrap.checkpoint  meta.properties  recovery-point-offset-checkpoint
pcap-sample-middleware/kafka/data/__cluster_metadata-0/: 00000000000000231469-0000000009.checkpoint  00000000000000238663-0000000009.checkpoint  00000000000000245857-0000000009.checkpoint  00000000000000253050-0000000009.checkpoint  00000000000000260246-0000000009.checkpoint  00000000000000267441-0000000009.checkpoint  00000000000000274637-0000000009.checkpoint  00000000000000281833-0000000009.checkpoint  00000000000000288994-0000000009.checkpoint  00000000000000296083-0000000009.checkpoint  00000000000000303159-0000000009.checkpoint  00000000000000310243-0000000009.checkpoint  00000000000000317323-0000000009.checkpoint  00000000000000324422-0000000009.checkpoint  leader-epoch-checkpoint
pcap-sample-middleware/kafka/data/test-0/: leader-epoch-checkpoint  partition.metadata
proto/: packet.proto
sniffy/: CMakeLists.txt  main.cpp
sniffy-domain/: CMakeLists.txt
sniffy-domain/proto/: packet.proto
sniffy-webapi/: .gitignore  sniffy-webapi.sln
sniffy-webapi/Ycode.Sniffy.Domain/: SniffyDbContext.cs  SniffyDbContextFactory.cs  SniffyWebApiConfig.cs  TrafficModel.cs  Ycode.Sniffy.Domain.csproj
sniffy-webapi/Ycode.Sniffy.Domain/Migrations/: 20241125110904_initial.Designer.cs  20241125110904_initial.cs  20241125121535_add_tbl_traffic_metrics.Designer.cs  20241125121535_add_tbl_traffic_metrics.cs  SniffyDbContextModelSnapshot.cs
sniffy-webapi/Ycode.Sniffy.WebApi/: Program.cs  Ycode.Sniffy.WebApi.csproj  Ycode.Sniffy.WebApi.http  appsettings.json
sniffy-webapi/Ycode.Sniffy.WebApi/Controllers/: SniffyController.cs
sniffy-webapi/Ycode.Sniffy.WebApi/Properties/: launchSettings.json
sniffy/include/: sniffer.hpp
sniffy/src/: sniffer.cpp
src/: y-pcap-service.cpp
traffic-aggry/: CMakeLists.txt
traffic-aggry/include/: kafka-producer.hpp  traffic-aggry.hpp
traffic-aggry/src/: kafka-producer.cpp  main.cpp  traffic-aggry.cpp
ypcap-middleware/: .env  docker-compose.yml
ypcap-middleware/kafka-connect/: Dockerfile
ypcap-middleware/kafka-connect/plugins/: ypcap-metrics-sink.json
ypcap-middleware/postgresql/: create_graph.sql  metrics-table.sql
ypcap-middleware/postgresql/ddl/: create_graph_from_table.sql  init.sql  traffic_metrics.sql
ypcap-middleware/postgresql/utils/: nslookup_traffic_via_protocol_22.sh  nslookup_traffic_via_protocol_22.sql
